Corrigindo descricao do Botao
Trocando a palavra "Enviar" para "Cadastrar" no botao criado.

--- a/formulario_ebac.html
+++ b/formulario_ebac.html
@@ -16,7 +16,7 @@
         <input id="Senha" type="Senha" /> <br />
 
         <button type="Submit">
-            Enviar
+            Cadastrar
     </form>
 </body>
 </html>
