--- a/formulario_ebac.html
+++ b/formulario_ebac.html
@@ -9,14 +9,15 @@
     <h1>Formulário EBAC</h1>
     <form>
         <label for="Nome">  Nome </label>
-        <input id="Nome" type="Nome" /> <br />
+        <input id="Nome" type="text" /> <br />
         <label for="E-mail"> E-mail </label>
-        <input id="E-mail" type="E-mail" /> <br />
+        <input id="E-mail" type="email" /> <br />
         <label for="Senha"> Senha</label>
-        <input id="Senha" type="Senha" /> <br />
+        <input id="Senha" type="password" /> <br />
 
         <button type="Submit">
             Cadastrar
+        </button>
     </form>
 </body>
 </html>
